syntax = "proto3";
package hat;
option go_package = "github.com/MouseHatGames/hat/proto";

service Hat {
    rpc Get(Path) returns (Data) {}
    rpc GetBulk(BulkRequest) returns (BulkResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Delete(Path) returns (DeleteResponse) {}
}

message Data {
    string json = 1;
}

message Path {
    repeated string parts = 1;
}

message SetResponse {}
message DeleteResponse {}

message SetRequest {
    Path path = 1;
    Data value = 2;
}

message BulkRequest {
	repeated Path paths = 1;
}

message BulkResponse {
	repeated Data data = 1;
}